# extor

./: .gitignore  README.md  extor.cabal  stack.yaml
src/Text/: Extor.hs
test/: Spec.hs
