name:                extor
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/huseyinyilmaz/extor#readme
license:             BSD3
license-file:        LICENSE
author:              Huseyin Yilmaz
maintainer:          yilmazhuseyin@gmail.com
copyright:           mit
category:            misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Extor
  build-depends:       base >= 4.7 && < 5
-- This is for intero. Remove it when you are done.
                     , HUnit
                     , tagsoup
                     , classy-prelude
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DuplicateRecordFields

test-suite extor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , classy-prelude
                     , HUnit
                     , tagsoup
                     , extor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DuplicateRecordFields


source-repository head
  type:     git
  location: https://github.com/huseyinyilmaz/extor
